# deep-finder

./: README.md  requirements.txt  setup.cfg
.github/workflows/: deploy.yml
deepfinder/: __init__.py  training.py
deepfinder/examples/analyze/: evaluate.py  step2_launch_clustering.py
deepfinder/pyqt/annotation/: gui_annotation.py
deepfinder/pyqt/display/: gui_display.py  widget_display.py
deepfinder/pyqt/train/: gui_train.py
deepfinder/test/: __init__.py
deepfinder/test/utils/: __init__.py  test_eval.py
deepfinder/utils/: __init__.py  common.py
docs/source/: cmd_line_tools.rst  guide.rst
