[metadata]
name = em-deepfinder
version = 1.1.0
author =
author_email =

license = GPL-3.0
description = Deep Finder is an original deep learning approach to localize macromolecules in cryo electron tomography images. The method is based on image segmentation using a 3D convolutional neural network.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    tensorflow==2.11.1
    Keras==2.8.0
    h5py>=3.6.0
    lxml>=4.8.0
    mrcfile>=1.3.0
    scikit-learn>=1.0.2
    scikit-image>=0.19.2
    matplotlib>=3.5.2
    PyQt5>=5.15.6
    pyqtgraph>=0.12.4
    openpyxl>=3.0.9
    scipy>=1.7.3
    numpy
    pycm

[options.package_data]
* = *.ui
deepfinder = examples/*/*/*.mrc, examples/*/*/**.h5, examples/*/*/**.txt, examples/*/*/**.png, examples/*/*/**.xml

[options.entry_points]
console_scripts =
    annotate = deepfinder.bin.annotate:main
    generate_target = deepfinder.bin.generate_target:main
    train = deepfinder.bin.train:main
    segment = deepfinder.bin.segment:main
    cluster = deepfinder.bin.cluster:main
    display = deepfinder.bin.display:main
